cattlevax-sf-sandbox/force-app/main/default/objects/APHA_BackgroundAction__c/APHA_BackgroundAction__c.object-meta.xml
<CustomObject>
    <label>Background Action</label>
    <nameField>
        <displayFormat>BA-{00000000}</displayFormat>
        <label>Background Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>