cattlevax-sf-sandbox/force-app/main/default/objects/APHA_BackgroundAction__c/fields/APHA_ActionType__c.field-meta.xml
<CustomField>
    <fullName>APHA_ActionType__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOV UK Email</fullName>
            </value>
            <value>
                <fullName>GOV UK Letter</fullName>
            </value>
            <value>
                <fullName>GOV UK Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>