cattlevax-sf-sandbox/force-app/main/default/objects/APHA_BackgroundAction__c/fields/APHA_HTTPStatusCode__c.field-meta.xml
<CustomField>
    <fullName>APHA_HTTPStatusCode__c</fullName>
    <label>HTTP Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>