cattlevax-sf-sandbox/force-app/main/default/objects/APHA_BackgroundAction__c/fields/APHA_RelatedRecordID__c.field-meta.xml
<CustomField>
    <fullName>APHA_RelatedRecordID__c</fullName>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>